update styles organization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Default</title>
+    <link href="assets/styles/build/production.min.css" rel="stylesheet">
   </head>
-  <body></body>
+  <body>
+    <script src="assets/js/build/production.min.js"></script>
+  </body>
 </html>
