--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Первый документ</title>
+    <link rel="stylesheet" href="assets/foundation/css/app.css"/>
+    <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
   <body></body>
 </html>
