--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Первый документ</title>
-    <link rel="stylesheet" href="assets/foundation/css/app.css"/>
+    <link rel="stylesheet" href="assets/styles/build/foundation.css"/>
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
-  <body></body>
+  <body><a href="" class="logo"></a>
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="row">
+          <div class="footer__btn large-2 columns">фыв</div>
+          <ul class="footer__nav large-4 columns">
+            <li class="footer__nav__item"><a href="" class="footer__nav__link">О проекте</a></li>
+            <li class="footer__nav__item"><a href="" class="footer__nav__link">Помощь</a></li>
+            <li class="footer__nav__item"><a href="" class="footer__nav__link">Партнерам</a></li>
+          </ul>
+          <div class="large-6 columns">вфыв</div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
