--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,119 @@
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
   <body><a href="" class="logo"></a>
+    <section class="features">
+      <p class="heading">Как работает Smena?</p>
+      <div class="wrapper"></div>
+    </section>
+    <section class="catalog">
+      <p class="heading">Бесплатные смены</p>
+      <div class="wrapper">
+        <div class="catalog__list">
+          <div class="row">
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-2 columns large-centered"><a href="" class="button button__catalog">Все смены</a></div>
+        </div>
+      </div>
+    </section>
+    <section class="reports">
+      <p class="heading">Отзывы клиентов</p>
+      <div class="wrapper">
+        <div class="row">
+          <div class="large-3 columns"><img src="http://www.avatar-mix.ru/avatars_200x200/1425.jpg" alt="" class="reports__image"/>
+            <div class="reports__username">Ася Нежданная</div>
+            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
+          </div>
+          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j009.jpg" alt="" class="reports__image"/>
+            <div class="reports__username">Антон Ершов</div>
+            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
+          </div>
+          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j036.jpg" alt="" class="reports__image"/>
+            <div class="reports__username">Алина Андреева</div>
+            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
+          </div>
+          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j064.jpg" alt="" class="reports__image"/>
+            <div class="reports__username">Сергей Баргамон</div>
+            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="wrapper">
         <div class="row">
