--- a/app/smena_catalog.html
+++ b/app/smena_catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
   <body>
-    <header class="header header_promo"><a href="" class="sprite_logo header__logo"></a>
+    <header class="header"><a href="" class="sprite_logo header__logo"></a>
       <nav class="header__nav">
         <ul class="header__nav__list">
           <li class="header__nav__item"><a href="">Стилисты</a></li>
@@ -18,54 +18,12 @@
         </ul>
       </nav>
     </header>
-    <section class="promo">
+    <div class="heading heading_centered">
       <div class="wrapper">
-        <div class="row large-8 columns large-centered">
-          <h1 class="promo__title">	Твой новый образ</h1>
-          <div class="promo__lead">SMENA – онлайн сервис, где профессиональные стилисты помогут изменить гардероб и подобрать вещи, которые подойдут именно вам</div>
-        </div>
-        <div class="row">
-          <div class="large-3 columns large-centered"><a href="" class="button button__catalog">Начать консультацию</a></div>
-        </div>
+        <h1 class="heading">Бесплатные смены</h1>
       </div>
-      <div class="promo__labels">
-        <div class="wrapper">
-          <div class="promo__label">
-            <div class="promo__label__icon">
-              <div class="icon sprite_promo-bowtie"></div>
-            </div>
-            <div class="promo__label__lead">Подобрать образ<br/>под повод</div>
-          </div>
-          <div class="promo__label">
-            <div class="promo__label__icon">
-              <div class="icon sprite_promo-glasses"></div>
-            </div>
-            <div class="promo__label__lead">Подобрать<br/>Вещь</div>
-          </div>
-          <div class="promo__label">
-            <div class="promo__label__icon">
-              <div class="icon sprite_promo-bags"></div>
-            </div>
-            <div class="promo__label__lead">Подобрать образ<br/>под вещь</div>
-          </div>
-          <div class="promo__label">
-            <div class="promo__label__icon">
-              <div class="icon sprite_promo-hanger"></div>
-            </div>
-            <div class="promo__label__lead">Подобрать<br/>новый имидж</div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="socials">
-      <div class="wrapper"></div>
-    </section>
-    <section class="features">
-      <p class="heading">Как работает Smena?</p>
-      <div class="wrapper"></div>
-    </section>
-    <section class="catalog">
-      <p class="heading">Бесплатные смены</p>
+    </div>
+    <div class="catalog_inner">
       <div class="wrapper">
         <div class="catalog__list">
           <div class="row">
@@ -105,8 +63,42 @@
                 <div class="catalog__stylist__label">Стилист</div>
               </div>
             </div>
-          </div>
-          <div class="row">
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
+            <div class="catalog__list__item large-3 columns">
+              <div class="catalog__photo">
+                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
+                <div class="catalog__overlay"></div>
+              </div>
+              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
+                <div class="catalog__stylist__label">Стилист</div>
+              </div>
+            </div>
             <div class="catalog__list__item large-3 columns">
               <div class="catalog__photo">
                 <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
@@ -144,35 +136,22 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="large-2 columns large-centered"><a href="" class="button button__catalog">Все смены</a></div>
         </div>
       </div>
-    </section>
-    <section class="reports">
-      <p class="heading">Отзывы клиентов</p>
-      <div class="wrapper">
-        <div class="row">
-          <div class="large-3 columns"><img src="http://www.avatar-mix.ru/avatars_200x200/1425.jpg" alt="" class="reports__image"/>
-            <div class="reports__username">Ася Нежданная</div>
-            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
-          </div>
-          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j009.jpg" alt="" class="reports__image"/>
-            <div class="reports__username">Антон Ершов</div>
-            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
-          </div>
-          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j036.jpg" alt="" class="reports__image"/>
-            <div class="reports__username">Алина Андреева</div>
-            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
-          </div>
-          <div class="large-3 columns"><img src="http://zano.ru/avatar/images/200j064.jpg" alt="" class="reports__image"/>
-            <div class="reports__username">Сергей Баргамон</div>
-            <p class="reports__lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
-          </div>
-        </div>
+      <div class="pagination-centered">
+        <ul class="pagination">
+          <li class="arrow unavailable"><a href="">«</a></li>
+          <li class="current"><a href="">1</a></li>
+          <li><a href="">2</a></li>
+          <li><a href="">3</a></li>
+          <li><a href="">4</a></li>
+          <li class="unavailable"><a href="">…</a></li>
+          <li><a href="">12</a></li>
+          <li><a href="">13</a></li>
+          <li class="arrow"><a href="">»</a></li>
+        </ul>
       </div>
-    </section>
+    </div>
     <footer class="footer">
       <div class="wrapper">
         <div class="row">
