add stylist catalog

--- a/app/smena_catalog.html
+++ b/app/smena_catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
   <body>
-    <header class="header"><a href="" class="sprite_logo header__logo"></a>
+    <header class="header header_inner"><a href="" class="sprite_logo_inner header__logo"></a>
       <nav class="header__nav">
         <ul class="header__nav__list">
           <li class="header__nav__item"><a href="">Стилисты</a></li>
@@ -23,46 +23,15 @@
         <h1 class="heading">Бесплатные смены</h1>
       </div>
     </div>
+    <div class="filters">
+      <div class="wrapper wrapper_row">
+        <div class="filters__list"><a href="" class="filters__item active">По дате</a><a href="" class="filters__item">Популярные</a><a href="" class="filters__item">По стилистам</a></div>
+      </div>
+    </div>
     <div class="catalog_inner">
       <div class="wrapper">
         <div class="catalog__list">
           <div class="row">
-            <div class="catalog__list__item large-3 columns">
-              <div class="catalog__photo">
-                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
-                <div class="catalog__overlay"></div>
-              </div>
-              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
-                <div class="catalog__stylist__label">Стилист</div>
-              </div>
-            </div>
-            <div class="catalog__list__item large-3 columns">
-              <div class="catalog__photo">
-                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
-                <div class="catalog__overlay"></div>
-              </div>
-              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
-                <div class="catalog__stylist__label">Стилист</div>
-              </div>
-            </div>
-            <div class="catalog__list__item large-3 columns">
-              <div class="catalog__photo">
-                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
-                <div class="catalog__overlay"></div>
-              </div>
-              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
-                <div class="catalog__stylist__label">Стилист</div>
-              </div>
-            </div>
-            <div class="catalog__list__item large-3 columns">
-              <div class="catalog__photo">
-                <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
-                <div class="catalog__overlay"></div>
-              </div>
-              <div class="catalog__stylist"><a class="catalog__stylist__photo"><img src="images/catalog_stylist.jpg"/></a><a class="catalog__stylist__name">Василий Степанов</a>
-                <div class="catalog__stylist__label">Стилист</div>
-              </div>
-            </div>
             <div class="catalog__list__item large-3 columns">
               <div class="catalog__photo">
                 <div class="catalog__clothes"><img src="images/catalog_clothes1.png" class="catalog__clothes__item"/><img src="images/catalog_clothes2.png" class="catalog__clothes__item"/><img src="images/catalog_clothes3.png" class="catalog__clothes__item"/><img src="images/catalog_clothes4.png" class="catalog__clothes__item"/></div><img src="images/catalog_photo.jpg"/>
@@ -163,6 +132,8 @@
           </ul>
           <div class="large-6 columns">вфыв</div>
         </div>
+      </div>
+      <div class="wrapper wrapper_row">
         <div class="footer__credits"><span class="footer__credits__item">© 2014 Smena</span><a href="" class="footer__credits__item">Пользовательское соглашение</a><a href="mailto:support@smena.ru" class="footer__credits__item">support@smena.ru</a></div>
       </div>
     </footer>
