add stylist profile page

--- a/app/smena_catalog.html
+++ b/app/smena_catalog.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Первый документ</title>
+    <title>Каталог смен</title>
     <link rel="stylesheet" href="foundation/css/app.css"/>
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
   <body>
-    <header class="header header_inner"><a href="" class="sprite_logo_inner header__logo"></a>
+    <header class="header header_inner"><a href="" class="sprite_logo_inner icon header__logo"></a>
       <nav class="header__nav">
         <ul class="header__nav__list">
           <li class="header__nav__item"><a href="">Стилисты</a></li>
@@ -18,9 +18,10 @@
         </ul>
       </nav>
     </header>
+    <div class="header__padding"></div>
     <div class="heading heading_centered">
       <div class="wrapper">
-        <h1 class="heading">Бесплатные смены</h1>
+        <h1 class="title">Бесплатные смены</h1>
       </div>
     </div>
     <div class="filters">
