--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Первый документ</title>
+    <title>Главная страница</title>
     <link rel="stylesheet" href="foundation/css/app.css"/>
     <link rel="stylesheet" href="assets/styles/build/production.min.css"/>
   </head>
@@ -61,11 +61,11 @@
       <div class="wrapper"></div>
     </section>
     <section class="features">
-      <p class="heading">Как работает Smena?</p>
+      <p class="title">Как работает Smena?</p>
       <div class="wrapper"></div>
     </section>
     <section class="catalog">
-      <p class="heading">Бесплатные смены</p>
+      <p class="title">Бесплатные смены</p>
       <div class="wrapper">
         <div class="catalog__list">
           <div class="row">
@@ -149,7 +149,7 @@
       </div>
     </section>
     <section class="reports">
-      <p class="heading">Отзывы клиентов</p>
+      <p class="title">Отзывы клиентов</p>
       <div class="wrapper">
         <div class="row">
           <div class="large-3 columns"><img src="http://www.avatar-mix.ru/avatars_200x200/1425.jpg" alt="" class="reports__image"/>
@@ -182,6 +182,8 @@
           </ul>
           <div class="large-6 columns">вфыв</div>
         </div>
+      </div>
+      <div class="wrapper wrapper_row">
         <div class="footer__credits"><span class="footer__credits__item">© 2014 Smena</span><a href="" class="footer__credits__item">Пользовательское соглашение</a><a href="mailto:support@smena.ru" class="footer__credits__item">support@smena.ru</a></div>
       </div>
     </footer>
