final stylist page

--- a/app/stylist_page.html
+++ b/app/stylist_page.html
@@ -23,8 +23,20 @@
       <div class="wrapper">
         <div class="row">
           <div class="stylist_profile__photo large-2 columns"><img src="http://pikchyriki.net/avatar/krutye/140/8.jpg" class="block"/></div>
-          <div class="stylist_profile__info large-7">
+          <div class="stylist_profile__info large-6">
             <div class="stylist_profile__name">Василий Степанов</div>
+            <div class="stylist_profile__summary"><a src="" class="stylist_profile__summary__item iblock">О себе</a>
+              <div class="stylist_profile__summary__item iblock"><b>24</b>Cмены</div>
+            </div><a href="" class="button">Заказать смену</a>
+          </div>
+          <div class="stylist_profile__socials large-3">
+            <div class="rating">
+              <div class="icon rating__item state_full"></div>
+              <div class="icon rating__item state_full"></div>
+              <div class="icon rating__item state_full"></div>
+              <div class="icon rating__item"></div>
+              <div class="icon rating__item"></div>
+            </div>
           </div>
         </div>
       </div>
