client profile form

--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="row">
-          <div class="large-2 columns"><a href="" class="button button__footer">Стать стилистом</a></div>
+          <div class="large-2 columns"><a href="" class="button button_footer">Стать стилистом</a></div>
           <ul class="footer__nav large-4 columns">
             <li class="footer__nav__item"><a href="">О проекте</a></li>
             <li class="footer__nav__item"><a href="">Помощь</a></li>
