--- a/app/stylist_catalog.html
+++ b/app/stylist_catalog.html
@@ -38,13 +38,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -57,13 +51,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -76,13 +64,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -95,13 +77,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -114,13 +90,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -133,13 +103,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -152,13 +116,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -171,13 +129,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -190,13 +142,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -209,13 +155,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -228,13 +168,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -247,13 +181,7 @@
                 <div class="catalog__overlay"><i class="icon sprite_watch"></i></div>
               </div>
               <div class="stylist__info"><a src="" class="stylist__name">Василиcа Степанова</a>
-                <div class="rating rating_stylist">
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item state_full"></div>
-                  <div class="icon rating__item"></div>
-                  <div class="icon rating__item"></div>
-                </div>
+                <div class="rating rating_stylist"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
                 <div class="stylist__summary">
                   <div class="stylist__summary__item count"><span class="block">24</span>Смены</div>
                   <div class="stylist__summary__item status"><span class="block">
@@ -281,7 +209,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="row">
-          <div class="large-2 columns"><a href="" class="button button__footer">Стать стилистом</a></div>
+          <div class="large-2 columns"><a href="" class="button button_footer">Стать стилистом</a></div>
           <ul class="footer__nav large-4 columns">
             <li class="footer__nav__item"><a href="">О проекте</a></li>
             <li class="footer__nav__item"><a href="">Помощь</a></li>
