--- a/app/stylist_page.html
+++ b/app/stylist_page.html
@@ -30,13 +30,7 @@
             </div><a href="" class="button">Заказать смену</a>
           </div>
           <div class="stylist_profile__socials large-3">
-            <div class="rating">
-              <div class="icon rating__item state_full"></div>
-              <div class="icon rating__item state_full"></div>
-              <div class="icon rating__item state_full"></div>
-              <div class="icon rating__item"></div>
-              <div class="icon rating__item"></div>
-            </div>
+            <div class="rating"><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item state_full"></i><i class="icon rating__item"></i><i class="icon rating__item"></i></div>
           </div>
         </div>
       </div>
@@ -118,7 +112,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="row">
-          <div class="large-2 columns"><a href="" class="button button__footer">Стать стилистом</a></div>
+          <div class="large-2 columns"><a href="" class="button button_footer">Стать стилистом</a></div>
           <ul class="footer__nav large-4 columns">
             <li class="footer__nav__item"><a href="">О проекте</a></li>
             <li class="footer__nav__item"><a href="">Помощь</a></li>
